; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_snippet.c_fts3ExprIterate2.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_snippet.c_fts3ExprIterate2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_5__*, %struct.TYPE_5__* }

@FTSQUERY_PHRASE = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@FTSQUERY_NOT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*, i32 (%struct.TYPE_5__*, i32, i8*)*, i8*)* @fts3ExprIterate2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fts3ExprIterate2(%struct.TYPE_5__* %0, i32* %1, i32 (%struct.TYPE_5__*, i32, i8*)* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32 (%struct.TYPE_5__*, i32, i8*)*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 (%struct.TYPE_5__*, i32, i8*)* %2, i32 (%struct.TYPE_5__*, i32, i8*)** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = load i32, i32* @FTSQUERY_PHRASE, align 4
  %16 = icmp ne i32 %14, %15
  br i1 %16, label %17, label %54

17:                                               ; preds = %4
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 2
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %21 = icmp ne %struct.TYPE_5__* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 1
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %24, align 8
  %26 = icmp ne %struct.TYPE_5__* %25, null
  br label %27

27:                                               ; preds = %22, %17
  %28 = phi i1 [ false, %17 ], [ %26, %22 ]
  %29 = zext i1 %28 to i32
  %30 = call i32 @assert(i32 %29)
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 2
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %32, align 8
  %34 = load i32*, i32** %6, align 8
  %35 = load i32 (%struct.TYPE_5__*, i32, i8*)*, i32 (%struct.TYPE_5__*, i32, i8*)** %7, align 8
  %36 = load i8*, i8** %8, align 8
  %37 = call i32 @fts3ExprIterate2(%struct.TYPE_5__* %33, i32* %34, i32 (%struct.TYPE_5__*, i32, i8*)* %35, i8* %36)
  store i32 %37, i32* %9, align 4
  %38 = load i32, i32* %9, align 4
  %39 = load i32, i32* @SQLITE_OK, align 4
  %40 = icmp eq i32 %38, %39
  br i1 %40, label %41, label %53

41:                                               ; preds = %27
  %42 = load i32, i32* %10, align 4
  %43 = load i32, i32* @FTSQUERY_NOT, align 4
  %44 = icmp ne i32 %42, %43
  br i1 %44, label %45, label %53

45:                                               ; preds = %41
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %46, i32 0, i32 1
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %47, align 8
  %49 = load i32*, i32** %6, align 8
  %50 = load i32 (%struct.TYPE_5__*, i32, i8*)*, i32 (%struct.TYPE_5__*, i32, i8*)** %7, align 8
  %51 = load i8*, i8** %8, align 8
  %52 = call i32 @fts3ExprIterate2(%struct.TYPE_5__* %48, i32* %49, i32 (%struct.TYPE_5__*, i32, i8*)* %50, i8* %51)
  store i32 %52, i32* %9, align 4
  br label %53

53:                                               ; preds = %45, %41, %27
  br label %64

54:                                               ; preds = %4
  %55 = load i32 (%struct.TYPE_5__*, i32, i8*)*, i32 (%struct.TYPE_5__*, i32, i8*)** %7, align 8
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %57 = load i32*, i32** %6, align 8
  %58 = load i32, i32* %57, align 4
  %59 = load i8*, i8** %8, align 8
  %60 = call i32 %55(%struct.TYPE_5__* %56, i32 %58, i8* %59)
  store i32 %60, i32* %9, align 4
  %61 = load i32*, i32** %6, align 8
  %62 = load i32, i32* %61, align 4
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %61, align 4
  br label %64

64:                                               ; preds = %54, %53
  %65 = load i32, i32* %9, align 4
  ret i32 %65
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
